txsvc: implement some of the unhandled validator methods
fix consensus failure when re-adding prior validator

sync option for bcast (async, sync, commit)

use Client.Signer and remove NewNodeTx
